Modifiation to Create Rider Profile and Display All Rider

--- a/EmailTemplate/EmailConfirm.html
+++ b/EmailTemplate/EmailConfirm.html
@@ -7,11 +7,11 @@
 <body>
     <p>
         Hello {{UserName}}, <br />
-        Thank you for using the OnlineStore  web application. <br />
+        Thank you for using the Orgain Option  web application. <br />
        
-        Click on the following link to verify your email id. <br /><br />
+        Click on the following link to verify your Account <br /><br />
 
-        <a href="{{Link}}">Verify email</a>
+        <a href="{{Link}}">Verify Account</a>
 </body>
 </html>
 
