Update common code

--- a/EmailTemplate/TestEmail.html
+++ b/EmailTemplate/TestEmail.html
@@ -7,7 +7,7 @@
 <body>
     <p>
         Hello {{UserName}}, <br />
-        This email is coming from OnlieStore web application
+        This email is coming from Organic Option web application
     </p>
 </body>
 </html>
